--- a/project-starter/project-starter.vcxproj
+++ b/project-starter/project-starter.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="dataStructures.h" />
     <ClInclude Include="mapping.h" />
   </ItemGroup>
   <ItemGroup>
