--- a/project-starter/project-starter.vcxproj.filters
+++ b/project-starter/project-starter.vcxproj.filters
@@ -21,6 +21,15 @@
     <ClInclude Include="dataStructures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="route.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mapping.c">
