Data Structures created in a header file and also by creating some header files for map, point and route structures

--- a/SourceCode/project-starter/project-starter/project-starter.vcxproj.filters
+++ b/SourceCode/project-starter/project-starter/project-starter.vcxproj.filters
@@ -18,6 +18,18 @@
     <ClInclude Include="mapping.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="route.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dataStructures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mapping.c">
