--- a/SourceCode/project-starter/project-starter/project-starter.vcxproj
+++ b/SourceCode/project-starter/project-starter/project-starter.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="dataStructures.h" />
+    <ClInclude Include="map.h" />
     <ClInclude Include="mapping.h" />
+    <ClInclude Include="point.h" />
+    <ClInclude Include="route.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
